<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pda.haesol.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pda.haesol.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pda.haesol.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_sample"
        android:name="com.pda.haesol.ui.sample.SampleFragment"
        android:label="@string/menu_sample"
        tools:layout="@layout/fragment_sample" />

    <fragment
        android:id="@+id/nav_demo"
        android:name="com.pda.haesol.ui.demo.DemoFragment"
        android:label="@string/menu_demo"
        tools:layout="@layout/fragment_demo" />

    <fragment
        android:id="@+id/nav_demo2"
        android:name="com.pda.haesol.ui.demo.Demo2Fragment"
        android:label="@string/menu_demo2"
        tools:layout="@layout/fragment_demo2" />

    <fragment
        android:id="@+id/nav_demo3"
        android:name="com.pda.haesol.ui.demo.Demo3Fragment"
        android:label="@string/menu_demo3"
        tools:layout="@layout/fragment_demo3" />
</navigation>